Add Gitpod config for CSRF origin
Supports CSRF with Django 4+ (Baby Buddy v1.10.0+).

See #393.

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,7 +6,7 @@ tasks:
       gulp migrate &&
       gulp createcachetable
     env:
-      DJANGO_SETTINGS_MODULE: babybuddy.settings.development
+      DJANGO_SETTINGS_MODULE: babybuddy.settings.gitpod
     command: gulp
 
 ports:
